--- a/project/templates/master.html.twig
+++ b/project/templates/master.html.twig
@@ -16,14 +16,14 @@
                 {% endif %}
                 <li>Random Class</li>
                 <li>Random Lesson</li>
-                <li><a href="/create_class">Create Class</li>
-                <li><a href="/class_list">Join Class</li>
+                <li><a href="/create_class">Create Class</a></li>
+                <li><a href="/class_list">Join Class</a></li>
             </ul>
         </div>
         {% block content %}{% endblock %}
         <div id="footer">
             {% block footer %}
-                <br>Developed by Norman Fong and Henry Zakay</a>.
+                Developed by Norman Fong and Henry Zakay.
             {% endblock %}
         </div>
     </body>
