--- a/project/templates/master.html.twig
+++ b/project/templates/master.html.twig
@@ -21,7 +21,9 @@
                 <li><a href="/class_list">Join Class</a></li>
             </ul>
         </div>
+        <div id="content">
         {% block content %}{% endblock %}
+        </div>
         <div id="footer">
             {% block footer %}
                 Developed by Norman Fong and Henry Zakay.
