--- a/project/templates/master.html.twig
+++ b/project/templates/master.html.twig
@@ -2,12 +2,13 @@
 <html>
     <head>        
         <link rel="stylesheet" href="/styles.css" />
-        <title>{% block title %}{% endblock %} - My Webpage</title>
+        <title>{% block title %}{% endblock %}</title>
         {% block head %}{% endblock %}
     </head>
     <body>
         <div id="nav">
             <img src="/images/Logo.png" id="logo" alt="Classnotes Logo" width="250" height="250">
+            </br>
             <ul id="menu">
                 {% if userSession %}
                     <li><a href="/logout">Logout</a></li>
