Updated Master & Style

--- a/project/templates/master.html.twig
+++ b/project/templates/master.html.twig
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="nav">
-            <img src="/images/Logo.png" id="logo" alt="Classnotes Logo" width="250" height="250">
+            <a href="/"><img src="/images/Logo.png" id="logo" alt="Classnotes Logo" width="250" height="250"></a>
             </br>
             <ul id="menu">
                 {% if userSession %}
