--- a/project/styles.css
+++ b/project/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: whitesmoke;
+    background-color: black;
 }
 
 #logo {
@@ -14,5 +14,5 @@ body {
 
 #content {
     float: none;
-    background-color: gold;
+    background-color: goldenrod;
 }
