--- a/project/templates/register.html.twig
+++ b/project/templates/register.html.twig
@@ -2,14 +2,50 @@
 
 {% block title %}Register{% endblock %}
 
+{% block head %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            // alert("jQuery works");
+            $('input[name=email]').on('paste blur change input', function() {
+                var email = $('input[name=email]').val();
+                $("#emailTaken").load("/isemailtaken/" + email);
+            });
+
+            $(document).ajaxError(function(event, jqxhr, settings, thrownError) {
+                console.log("Ajax error occured on " + settings.url);
+                alert("Ajax error occured");
+            });
+
+        });
+    </script>
+{% endblock %}
+
 {% block content %}
 
-    <form method="post">
-        User name: <input type="text" name="name" value="{{ v.name }}"><br>
-        Email: <input type="text" name="email" value="{{ v.email }}">
-        <span class="errorMessage" id="emailTaken"></span><br>
-        Password <input type="password" name="pass1"><br>
-        Password (repeated) <input type="password" name="pass2"><br>
+    {% if errorList %}
+        <ul class="errorMessage">
+        {% for error in errorList %}
+            <li>{{error}}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+
+    <form method="post" id="regForm">
+
+        <label>Username</label>
+        <input type="text" name="name" value="{{ v.name }}" placeholder="username">
+
+        <label>Email</label>
+        <input type="text" name="email" value="{{ v.email }}" placeholder="john.doe@cats.com">
+        <span class="errorMessage" id="emailTaken"></span>
+
+        <label>Password</label>
+        <input type="password" name="pass1" placeholder="**********">
+
+        <label>Password (repeated)</label>
+        <input type="password" name="pass2" placeholder="**********">
+
         <input type="submit" value="Register">
     </form>
 {% endblock %}
