--- a/project/templates/index.html.twig
+++ b/project/templates/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}ClassNotes{% endblock %}
 
 {% block content %}
-    {% for a in list %}
+    {% for c in list %}
     <div id="class">
         <h1><a href="/class/{{c.classid}}">{{c.name}}</a></h1>
         <hr>
