--- a/project/templates/error_internal.html.twig
+++ b/project/templates/error_internal.html.twig
@@ -1,10 +1,10 @@
 {% extends "master.html.twig" %}
 
-{% block title %}ClassNotes{% endblock %}
+{% block title %}Internal Error{% endblock %}
 
 {% block content %}
-    <div>
-        <p><a href="/">Return Home</a></h1>
-        <hr>
+    <div id="error">
+        <p></p>
+        <p><a href="/">Return Home</a></p>
     </div>   
 {% endblock %}
