--- a/project/templates/index.html.twig
+++ b/project/templates/index.html.twig
@@ -6,6 +6,7 @@
     {% for c in list %}
     <div id="class">
         <h1><a href="/class/{{c.classid}}">{{c.name}}</a></h1>
+        <p>{{c.body}}</p>
     </div>
     </br>
     {% endfor %}
