Attempted Mainpage fix

--- a/project/templates/master.html.twig
+++ b/project/templates/master.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>        
         <link rel="stylesheet" href="/styles.css" />
-        <title>{% block title %}{% endblock %}</title>
+        <title>ClassNotes - {% block title %}{% endblock %}</title>
         {% block head %}{% endblock %}
     </head>
     <body>
