--- a/project/templates/index.html.twig
+++ b/project/templates/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "master.html.twig" %}
 
-{% block title %}ClassNotes{% endblock %}
+{% block title %}Main Page{% endblock %}
 
 {% block content %}
     {% for c in list %}
