--- a/project/styles.css
+++ b/project/styles.css
@@ -20,30 +20,36 @@ body {
     padding: 0.5em 0 0.5em 1em;
 }
 
+#footer {
+    margin-left: 16em;
+    background-color: goldenrod;
+    padding: 0.5em 0 0.5em 1em;
+}
+
 /* 
-CSS for register page
+CSS for user-related forms 
 */
 .errorMessage {
     padding-top: 2em;
 }
 
-#regForm {
+.userForm {
     display: inline-block;
 }
 
-#regForm > label {
+.userForm > label {
     display: block;
     margin: 10px 0 5px 0;
     font-weight: 700;
 }
 
-#regForm > input[type=text], #regForm > input[type=password] {
+.userForm > input[type=text], .userForm > input[type=password] {
     border-radius: 4px;
     border: 1px solid #ccc;
     padding: 6px 12px;
 }
 
-#regForm > input[type=submit] {
+.userForm > input[type=submit] {
     display: block;
     background-color: #4EBF60;
     color: white;
@@ -53,5 +59,5 @@ CSS for register page
     border-radius: 4px;
 }
 /* 
-end of CSS for register page 
+end of CSS for user-related forms 
 */
