--- a/project/templates/index.html.twig
+++ b/project/templates/index.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     {% for c in list %}
     <div id="class">
-        <h1><a href="/class/{{c.classid}}">{{c.name}}</a></h1>
+        <h1><a href="/class/{{c.classid}}">{{c.classname}}</a></h1>
         <p>{{c.body}}</p>
     </div>
     </br>
