Corrected new username from SQL changes

--- a/project/templates/register.html.twig
+++ b/project/templates/register.html.twig
@@ -38,8 +38,8 @@
 
     <form method="post" class="userForm">
 
-        <label for="name">Username</label>
-        <input type="text" name="name" value="{{ v.name }}" placeholder="username">
+        <label for="username">Username</label>
+        <input type="text" name="username" value="{{ v.name }}" placeholder="username">
         <span class="errorMessage" id="userTaken"></span>
 
         <label for="email">Email</label>
