--- a/project/templates/login.html.twig
+++ b/project/templates/login.html.twig
@@ -8,10 +8,10 @@
     {% endif %}
 
     <form method="post" class="userForm">
-        <label>Username</label> 
-        <input type="text" name="name">
+        <label for="username">Username</label> 
+        <input type="text" name="username">
 
-        <label>Password</label>
+        <label for="password">Password</label>
         <input type="password" name="password">
         <input type="submit" value="Login">
     </form>
