Updated classname regex and added styles for classes

--- a/project/styles.css
+++ b/project/styles.css
@@ -6,6 +6,10 @@ body {
     background-color: black;
 }
 
+#class {
+    background-color: gold;
+}
+
 #nav {
     position: absolute;
     left: 0;
