attempted to make create_lesson

--- a/project/templates/master.html.twig
+++ b/project/templates/master.html.twig
@@ -20,6 +20,7 @@
                 <li>Random Lesson</li>
                 <li><a href="/create_class">Create Class</a></li>
                 <li><a href="/class_list">Join Class</a></li>
+                <li><a href="/create_lesson">Create a Lesson</a></li>
             </ul>
         </div>
         <div id="content">
