--- a/project/styles.css
+++ b/project/styles.css
@@ -6,11 +6,21 @@ body {
     background-color: black;
 }
 
+#header {
+    border: 4px solid black;
+    background-color: whitesmoke;
+    color: black;
+    margin: 10em;
+    padding: 5em;
+    width: auto;
+}
+
 #class {
     border: 4px solid black;
     background-color: gold;
     margin: 10em;
     padding: 5em;
+    width: auto;
 }
 
 #nav {
@@ -23,8 +33,8 @@ body {
 #content {
     background-color: goldenrod;
     width: auto;
-    margin-left: 16em;
-    padding: 0.5em 0 0.5em 1em;
+    margin: 10em;
+    padding: 5em;
 }
 
 #footer {
