--- a/project/styles.css
+++ b/project/styles.css
@@ -28,13 +28,15 @@ body {
     left: 0;
     top: 0;
     background-color: goldenrod;
+    margin-left: 16em;
+    padding: 0.5em 0 0.5em 1em;
 }
 
 #content {
     background-color: goldenrod;
     width: auto;
-    margin: 2em;
-    padding: 2em;
+    margin: 10em;
+    padding: 5em;
 }
 
 #footer {
