--- a/project/styles.css
+++ b/project/styles.css
@@ -6,6 +6,10 @@ body {
     background-color: black;
 }
 
+#header {
+    float: right;
+}
+
 #header > ul{
     list-style-type: none;
     overflow: hidden;
