--- a/project/styles.css
+++ b/project/styles.css
@@ -6,8 +6,9 @@ body {
     background-color: black;
 }
 
+/*  FIXME
 #header {
-    float: right;
+    float: left;
 }
 
 #header > ul{
@@ -24,6 +25,7 @@ body {
 #header > li {
     float: left;
 }
+/*
 
 #class {
     border: 4px solid black;
@@ -45,8 +47,8 @@ body {
 #content {
     background-color: goldenrod;
     width: auto;
-    margin: 10em;
-    padding: 5em;
+    margin-left: 16em;
+    padding: 0.5em 0 0.5em 1em;
 }
 
 #footer {
