--- a/project/styles.css
+++ b/project/styles.css
@@ -6,11 +6,12 @@ body {
     background-color: black;
 }
 
-/*  FIXME
+
 #header {
-    float: left;
+    float: right;
 }
 
+/*  FIXME
 #header > ul{
     list-style-type: none;
     overflow: hidden;
