--- a/project/templates/class.html.twig
+++ b/project/templates/class.html.twig
@@ -1,6 +1,6 @@
 {% extends "master.html.twig" %}
 
-{% block title %}{{c.classname}}{% endblock %}
+{% block title %}{{a.classname}}{% endblock %}
 
 {% block content %}
     <div id="centerArticle">
