--- a/project/templates/class.html.twig
+++ b/project/templates/class.html.twig
@@ -2,6 +2,19 @@
 
 {% block title %}{{a.classname}}{% endblock %}
 
+{% block head %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#create_lesson').click(function() {
+                var classname = $('h1[class=centered]').text();
+                $.ajax({ url: "/cancreatelesson/" + classname });
+                alert("Cats");
+            });
+        });
+    </script>
+{% endblock %}
+
 {% block content %}
     <div id="centerArticle">
         <h1 class="centered">{{a.classname}}</h1>
@@ -20,6 +33,7 @@
             <input type="submit" value="Add Comment">
             </form>
         </div>
+        <p id="create_lesson">Create Lesson<p>
         {% endif %}
         <div class="articleComments">
             {% for c in commentsList %}
