--- a/project/styles.css
+++ b/project/styles.css
@@ -8,21 +8,29 @@ body {
 
 #header {
     margin-left: 16em;
-    padding: 0.5em 0 0.5em 1em;
+    padding: 0.5em 0.5em 0.5em 1em;
+    background-color: goldenrod;
 }
 
 #header > ul{
     list-style-type: none;
-    display: inline;
+    list-style-position: inside;
     border: 4px solid black;
-    background-color: whitesmoke;
     color: black;
+    height: 70px;
+    padding: 0;
+    margin: 0;
+    border-radius: 30px;
+    background-color: whitesmoke;
 }
 
-#header > li {
+#header > ul > li {
     float: left;
     margin: 1em;
     padding: 0.5em;
+    border: 3px solid rgba(161, 120, 7, 0.76);
+    border-radius: 10px;
+    background-color: rgb(255, 247, 137);
 }
 
 #class {
