--- a/project/styles.css
+++ b/project/styles.css
@@ -46,14 +46,14 @@ body {
     left: 0;
     top: 0;
     background-color: goldenrod;
-    padding: 0.5em 0 0.5em 1em;
+    padding: 0.5em 0.5em 0.5em 1em;
 }
 
 #content {
     background-color: goldenrod;
     width: auto;
     margin-left: 16em;
-    padding: 0.5em 0 0.5em 1em;
+    padding: 0 0 0.5em 1em;
 }
 
 #footer {
