--- a/project/styles.css
+++ b/project/styles.css
@@ -36,8 +36,8 @@ body {
 #class {
     border: 4px solid black;
     background-color: gold;
-    margin: 1em;
-    padding: 1em;
+    margin: 0.5em;
+    padding: 0.5em;
     width: auto;
 }
 
@@ -46,14 +46,14 @@ body {
     left: 0;
     top: 0;
     background-color: goldenrod;
-    padding: 0.5em 0.5em 0.5em 1em;
+    padding: 0.5em 0.5em 1em 1em;
 }
 
 #content {
     background-color: goldenrod;
     width: auto;
     margin-left: 16em;
-    padding: 0 0 0.5em 1em;
+    padding: 0.5em 0 0.5em 1em;
 }
 
 #footer {
