--- a/project/templates/class.html.twig
+++ b/project/templates/class.html.twig
@@ -40,7 +40,7 @@
             {% for co in commentsList %}
             <div class="commentBody">
                 </hr>
-                <span class="commentAuthorInfo"><a href="/profile/{{c.userid}}">{{c.username}}</a> said on {{co.date}}</span>
+                <span class="commentAuthorInfo"><a href="/profile/{{co.userid}}">{{co.username}}</a> said on {{co.date}}</span>
                 </hr>
                 <div>{{co.body}}</div>
             </div>
