--- a/project/styles.css
+++ b/project/styles.css
@@ -9,6 +9,7 @@ body {
 #header {
     margin-left: 16em;
     margin-bottom: 0.5em;
+    margin-right: 0.5em;
     padding: 0.5em 0.5em 0.5em 1em;
     background-color: goldenrod;
 }
@@ -55,6 +56,7 @@ body {
     background-color: goldenrod;
     width: auto;
     margin-left: 16em;
+    margin-right: 0.5em;
     padding: 0.5em 0 0.5em 1em;
 }
 
