--- a/project/templates/class.html.twig
+++ b/project/templates/class.html.twig
@@ -2,23 +2,6 @@
 
 {% block title %}{{a.classname}}{% endblock %}
 
-{% block head %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('#create_lesson').click(function() {
-                var classname = $('h1[class=centered]').text();
-                $.ajax({ url: "/cancreatelesson/" + classname });
-                alert("create lesson clicked");
-            });
-             $(document).ajaxError(function(event, jqxhr, settings, thrownError) {
-                console.log("Ajax error occured on " + settings.url);
-                alert("Ajax error occured");
-            });
-        });
-    </script>
-{% endblock %}
-
 {% block content %}
     <div id="centerArticle">
         <h1 class="centered">{{a.classname}}</h1>
@@ -37,7 +20,9 @@
                 <input type="submit" value="Add Comment">
                 </form>
             </div>
-            <p id="create_lesson">Create Lesson<p>
+            <form method="get" action="/create_lesson/{{a.classid}}" >
+                <input type="submit" value="Add Lesson">
+            </form>
         {% endif %}
         {% if commentsList %}
         <div class="comments">
