--- a/project/styles.css
+++ b/project/styles.css
@@ -13,10 +13,6 @@ body {
     padding: 0.5em 0.5em 0.5em 1em;
 }
 
-#header > h1 {
-    align-content: center;
-}
-
 #header > ul{
     list-style-type: none;
     list-style-position: inside;
@@ -71,6 +67,10 @@ body {
     border: 1px solid black;
     background-color: whitesmoke;
     margin: 0.5em;
+}
+
+h1 {
+    text-align:center;
 }
 
 /* 
