--- a/project/styles.css
+++ b/project/styles.css
@@ -36,6 +36,7 @@ body {
 
 #class {
     border: 4px solid black;
+    border-radius: 30px;
     background-color: gold;
     margin: 0.5em;
     padding: 0.5em;
@@ -43,6 +44,8 @@ body {
 }
 
 #nav {
+    border: 4px solid black;
+    border-radius: 30px;
     position: absolute;
     left: 0;
     top: 0;
@@ -51,6 +54,8 @@ body {
 }
 
 #content {
+    border: 4px solid black;
+    border-radius: 30px;
     background-color: goldenrod;
     width: auto;
     margin-left: 17.5em;
