--- a/project/styles.css
+++ b/project/styles.css
@@ -32,6 +32,7 @@ body {
     border: 3px solid rgba(161, 120, 7, 0.76);
     border-radius: 10px;
     background-color: rgb(255, 247, 137);
+    color: black;
 }
 
 #class {
@@ -51,6 +52,22 @@ body {
     top: 0;
     background-color: goldenrod;
     margin: 0.5em;
+}
+
+#menu {
+    margin-left: -1em;
+}
+
+#menu > li {
+    text-align: center;
+    list-style-type: none;
+    list-style-position: inside;
+    margin: 1em;
+    padding: 0.5em;
+    border: 3px solid rgba(161, 120, 7, 0.76);
+    border-radius: 10px;
+    background-color: rgb(255, 247, 137);
+    color: black;
 }
 
 #content {
@@ -110,12 +127,12 @@ CSS for user-related forms
 
 .userForm > input[type=submit] {
     display: block;
-    background-color: #4EBF60;
-    color: white;
+    color: black;
     margin: 0.8em 0 0 0.5em;
     padding: 15px 20px;
-    border: none;
-    border-radius: 4px;
+    border: 3px solid rgba(161, 120, 7, 0.76);
+    border-radius: 10px;
+    background-color: rgb(255, 247, 137);
 }
 /* 
 end of CSS for user-related forms 
