--- a/project/styles.css
+++ b/project/styles.css
@@ -87,8 +87,15 @@ body {
     padding: 0.5em 0 0.5em 1em;
 }
 
+.body {
+    background-color: whitesmoke;
+    padding: 1em;
+    margin-right: 1em;
+}
+
 .comments {
     background-color: black;
+    padding: 1em;
 }
 
 .commentBody {
@@ -100,6 +107,7 @@ body {
 
 h1 {
     text-align:center;
+    margin-bottom: 0;
 }
 
 /* 
