Updated some CSS

--- a/project/templates/index.html.twig
+++ b/project/templates/index.html.twig
@@ -6,7 +6,7 @@
     {% for c in list %}
     <div id="class">
         <h1><a href="/class/{{c.classid}}">{{c.classname}}</a></h1>
-        <apsn>Created by <a href="/profile/{{c.userid}}">{{c.username}}</a></span>
+        <span>Created by <a href="/profile/{{c.userid}}">{{c.username}}</a></span>
         <p>{{c.body}}</p>
     </div>
     </br>
