--- a/project/styles.css
+++ b/project/styles.css
@@ -96,19 +96,23 @@ body {
 .comments {
     background-color: black;
     padding: 1em;
+    margin-right: 1em;
 }
 
 .commentBody {
     border: 2px solid black;
-    padding: 0.5em;
+    padding: 0.25em;
     background-color: whitesmoke;
-    margin: 0.5em;
 }
 
 h1 {
     text-align:center;
     margin-bottom: 0;
 }
+
+p {
+    text-indent: 1.5em;
+ }
 
 /* 
 CSS for user-related forms 
