--- a/project/templates/class.html.twig
+++ b/project/templates/class.html.twig
@@ -8,7 +8,7 @@
         <hr>
         <i>Posted by {{a.username}}</i>  
         <hr>
-        <div class="body">{{a.body|raw}}</div>
+        <div class="body">&nbsp;&nbsp;&nbsp;&nbsp;{{a.body|raw}}</div>
         <hr>
         {% if userSession['userid'] == a.userid %} <!-- FIXME: Need to impliment system to allow user to change body -->
             <b>Edit Class</b>
