--- a/project/styles.css
+++ b/project/styles.css
@@ -91,6 +91,7 @@ body {
     background-color: whitesmoke;
     margin-right: 1em;
     padding-bottom: 1em;
+    padding-top: 1em;
 }
 
 .comments {
