--- a/project/styles.css
+++ b/project/styles.css
@@ -75,11 +75,13 @@ body {
     border-radius: 30px;
     background-color: goldenrod;
     width: auto;
+    height: auto;
     margin-left: 17.5em;
     padding: 0.5em 0 0.5em 1em;
 }
 
 #footer {
+    clear: both;
     border: 4px solid black;
     border-radius: 30px;
     margin-left: 17.5em;
@@ -89,15 +91,23 @@ body {
 
 .body {
     background-color: whitesmoke;
-    margin-right: 1em;
+    margin-right: 16em;
     padding-bottom: 1em;
     padding-top: 1em;
 }
 
 .comments {
+    float: right;
+    position: absolute;
     background-color: black;
     padding: 1em;
     margin-right: 1em;
+    top: 15em;
+    right: 1em;
+}
+
+.commentForm {
+    color: white;
 }
 
 .commentBody {
@@ -110,10 +120,6 @@ h1 {
     text-align:center;
     margin-bottom: 0;
 }
-
-p {
-    text-indent: 1.5em;
- }
 
 /* 
 CSS for user-related forms 
