--- a/project/styles.css
+++ b/project/styles.css
@@ -77,7 +77,7 @@ body {
     width: auto;
     height: auto;
     margin-left: 17.5em;
-    padding: 0.5em 0 0.5em 1em;
+    padding: 0.5em 0.5em 0.5em 1em;
 }
 
 #footer {
@@ -92,8 +92,7 @@ body {
 .body {
     background-color: whitesmoke;
     margin-right: 16em;
-    padding-bottom: 1em;
-    padding-top: 1em;
+    padding: 1em;
 }
 
 .comments {
@@ -114,12 +113,17 @@ body {
     border: 2px solid black;
     padding: 0.25em;
     background-color: whitesmoke;
+    width: 11em;
 }
 
 h1 {
     text-align:center;
     margin-bottom: 0;
 }
+
+p {
+    text-indent: 1.5em;
+ }
 
 /* 
 CSS for user-related forms 
