--- a/project/templates/class.html.twig
+++ b/project/templates/class.html.twig
@@ -27,7 +27,7 @@
                 <form method="post">
                 Add your Comments:
                 </br>
-                <textarea name="body">{{c.body}}</textarea>
+                <textarea name="body" col="60" row="20">{{c.body}}</textarea>
                 </br>
                 <input type="submit" value="Add Comment">
                 </form>
