--- a/project/styles.css
+++ b/project/styles.css
@@ -91,13 +91,12 @@ body {
 
 .body {
     background-color: whitesmoke;
-    margin-right: 16em;
     padding: 1em;
-    width: auto;
 }
 
 .comments {
     background-color: black;
+    padding: 1em;
 }
 
 .commentForm {
