--- a/project/templates/class.html.twig
+++ b/project/templates/class.html.twig
@@ -43,6 +43,8 @@
         {% else %}
             <span>Be the first to leave a comment!</span>
         {% endfor %}
+        {% else %}
+            <span><a href="/login">Login</a> to see comments!</span>
         {% endif %}
         </div>
         <p><a href="/">Back to Home</a></p>
