--- a/project/styles.css
+++ b/project/styles.css
@@ -95,17 +95,19 @@ body {
 }
 
 .comments {
-    background-color: black;
     padding: 1em;
 }
 
 .commentForm {
-    color: white;
+    border: 2px solid black;
+    margin: 0.5em;
+    padding: 0.5em;
 }
 
 .commentBody {
     border: 2px solid black;
-    padding: 0.25em;
+    margin: 0.5em;
+    padding: 0.5em;
     background-color: whitesmoke;
 }
 
