attempted lesson progress

--- a/project/templates/create_lesson.html.twig
+++ b/project/templates/create_lesson.html.twig
@@ -29,7 +29,7 @@
         </ul>
     {% endif %}
 
-    <form method="post" class="userForm">
+    <form method="post" class="userForm" action="/create_lesson">
         <input type="hidden" name="classinputid" id="classinputid" value="{{c.classid}}">
 
         <label for="title">Lesson Name</label>
