--- a/project/templates/edit_class.html.twig
+++ b/project/templates/edit_class.html.twig
@@ -20,7 +20,7 @@
             <textarea name="body">{{a.body}}</textarea>
             </br>
             <input type="submit" value="Save Edit">
-            <input type="submit" value="Delete">
+            <input type="submit" value="Delete"> <!-- FIXME: Needs to actually delete -->
         </form>
         <br>
         {% endif %}
