--- a/project/templates/error_internal.html.twig
+++ b/project/templates/error_internal.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div id="error">
-        <p></p>
+        <p>Internal error occured</p>
         <p><a href="/">Return Home</a></p>
     </div>   
 {% endblock %}
