--- a/project/templates/delete_class.html.twig
+++ b/project/templates/delete_class.html.twig
@@ -14,7 +14,7 @@
         <hr>
         {% if userSession['userid'] == a.userid %}
         <form method="post" id="classForm">
-            <p>Are you sure you want to <input type="submit" value="Delete"></p>
+            <p><strong>Are you sure you want to <input type="submit" value="Delete"> ?</strong></p>
         </form>        
         <br>
         {% endif %}
